objects/SO_Vehicle_Model__c.object
<CustomObject>
    <label>Vehicle Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Models</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Vehicle_Models</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Is_JLR_Classic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this model a JLR Classic?</description>
        <label>Is JLR Classic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year_End__c</fullName>
        <description>Last year that this model was available.</description>
        <label>Model Year End</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Is_Available_SVO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available SVO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year_Start__c</fullName>
        <description>Calendar year that this model was first offered for sale.</description>
        <label>Model Year Start</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SO_JLR_Model</fullName>
        <active>true</active>
        <description>Capture Models of Jaguar Land Rover vehicles</description>
        <label>JLR Model</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Non_JLR_Model</fullName>
        <active>true</active>
        <description>Capture Non-JLR vehicle models</description>
        <label>Non-JLR Model</label>
    </recordTypes>
    <validationRules>
        <fullName>Format_Year_End</fullName>
        <active>true</active>
        <description>Check that the string is a number so it displays as a year. Enforce 4 charcters and ensure it is &gt; 1890</description>
        <errorConditionFormula>NOT(ISBLANK(SO_Model_Year_End__c )) &amp;&amp;(
NOT(ISNUMBER(  SO_Model_Year_End__c )) || LEN( SO_Model_Year_End__c ) != 4 || VALUE( SO_Model_Year_End__c ) &lt; 1890)</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_End__c</errorDisplayField>
        <errorMessage>The year must be a valid 4 digit year greater than 1889.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_before_Start</fullName>
        <active>true</active>
        <description>Check that the end is not before the start year</description>
        <errorConditionFormula>NOT(ISBLANK( SO_Model_Year_End__c )) &amp;&amp; NOT(ISBLANK( SO_Model_Year_Start__c )) &amp;&amp; VALUE(SO_Model_Year_End__c ) &lt; VALUE(SO_Model_Year_Start__c )</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_End__c</errorDisplayField>
        <errorMessage>You cannot enter a end year that is before the start year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manage_JLR_Model</fullName>
        <active>true</active>
        <errorConditionFormula>( ISNEW() || ISCHANGED(Name) || ISCHANGED(SO_Model_Year_End__c) || ISCHANGED(SO_Model_Year_Start__c) ) &amp;&amp; NOT(  $Permission.SO_Manage_JLR_Models ) &amp;&amp;  SO_Manufacturer__r.SO_JLR_Owned_Brand__c</errorConditionFormula>
        <errorMessage>You are not authorised to make changes to JLR Models</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Format_Year_Start</fullName>
        <active>true</active>
        <description>Check that the string is a number so it displays as a year. Enforce 4 charcters and ensure it is &gt; 1890</description>
        <errorConditionFormula>NOT(ISBLANK(SO_Model_Year_Start__c )) &amp;&amp;(
NOT(ISNUMBER( SO_Model_Year_Start__c )) ||  LEN(SO_Model_Year_Start__c) != 4 ||  VALUE(SO_Model_Year_Start__c) &lt; 1890)</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_Start__c</errorDisplayField>
        <errorMessage>The year must be a valid 4 digit year greater than 1889.</errorMessage>
    </validationRules>
</CustomObject>